--- a/frontend-repo/storeapp/src/css/nav.css
+++ b/frontend-repo/storeapp/src/css/nav.css
@@ -40,3 +40,21 @@ h1 {
   border-radius: 50%;
   border: solid 2px #eea668;
 }
+
+.cnt {
+  position: relative;
+}
+
+.cnt::after {
+  content: attr(data-content);
+  position: absolute;
+  right: -12px;
+  top: -8px;
+  background-color: tomato;
+  width: 15px;
+  padding: 1px;
+  border-radius: 50%;
+  text-align: center;
+  color: #0c0b0b;
+  font-size: small;
+}
