--- a/frontend-repo/storeapp/src/css/recordStore.css
+++ b/frontend-repo/storeapp/src/css/recordStore.css
@@ -15,27 +15,39 @@ h3 {
   margin-bottom: 0;
 }
 
-.record-container {
-  /* margin-top: 50px;
+.image-wrapper {
+  margin-top: 50px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-gap: 15px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-row-gap: 40px;
   grid-column-gap: 40px;
-  grid-auto-flow: column; */
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  grid-auto-flow: row;
 }
 
-/* .image-wrapper {
-} */
+.record-info {
+  box-shadow: 0px 0px 10px #00000041;
+  position: relative;
+  color: #fff;
+}
 
-img {
+.plus-icon {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  background: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.record-info img {
   box-shadow: 0px 0px 10px #00000041;
   margin: 3px;
-  width: 300px;
+  width: 100%;
+  height: 100%;
 }
