--- a/frontend-repo/storeapp/src/App.css
+++ b/frontend-repo/storeapp/src/App.css
@@ -2,3 +2,16 @@
   text-align: center;
 }
 
+body {
+  margin: 0;
+}
+
+button {
+  padding: 10px;
+  width: 150px;
+}
+
+.price-btn {
+  background-color: black;
+  color: white;
+}
