--- a/frontend-repo/storeapp/src/css/footer.css
+++ b/frontend-repo/storeapp/src/css/footer.css
@@ -2,9 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 40px;
+  height: 80px;
   width: 100%;
-  background: #f2f2f2 0% 0% no-repeat padding-box;
+  background-color: #000000;
+  color: white;
   text-align: center;
   margin: 0;
+  bottom: 0;
+  position: static;
 }
