--- a/frontend-repo/storeapp/src/css/form.css
+++ b/frontend-repo/storeapp/src/css/form.css
@@ -43,9 +43,10 @@
   width: 80px;
   border-radius: 60px;
   background-color: #f2f2f2;
-  color: #000000;
+  color: #07080c;
   padding: 10px 8px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
+  font-weight: 800;
 }
