--- a/frontend-repo/storeapp/src/css/recordStore.css
+++ b/frontend-repo/storeapp/src/css/recordStore.css
@@ -45,9 +45,23 @@ h3 {
   transition: all 0.2s;
 }
 
+.price-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100px;
+  height: 40px;
+  background: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
 .record-info img {
   box-shadow: 0px 0px 10px #00000041;
-  margin: 3px;
+
   width: 100%;
   height: 100%;
 }
