--- a/frontend-repo/storeapp/src/App.css
+++ b/frontend-repo/storeapp/src/App.css
@@ -9,8 +9,20 @@ body {
 button {
   padding: 10px;
   width: 150px;
+  margin-top: 20px;
 }
 
 input {
   padding: 5px;
+  margin-bottom: 0;
+}
+
+.error-message {
+  height: 10px;
+  margin-top: -10px;
+
+  text-align: center;
+  padding-bottom: 5px;
+  border-radius: 3px;
+  color: rgb(236, 97, 97);
 }
