--- a/frontend-repo/storeapp/src/css/form.css
+++ b/frontend-repo/storeapp/src/css/form.css
@@ -37,6 +37,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  background-color: rgb(232, 240, 234);
 }
 
 .login-btn {
@@ -45,7 +46,7 @@
   background-color: #f2f2f2;
   color: #07080c;
   padding: 10px 8px;
-  margin: 8px 0;
+  margin: 15px 0;
   border: none;
   cursor: pointer;
   font-weight: 800;
