--- a/frontend-repo/storeapp/src/css/signup.css
+++ b/frontend-repo/storeapp/src/css/signup.css
@@ -35,10 +35,10 @@
 }
 
 input[type="text"],
+input[type="email"],
 input[type="password"] {
   border-style: none;
   border-bottom: 2px solid grey;
-  margin-bottom: 10%;
   font-size: 16px;
   font-weight: bold;
 }
@@ -46,12 +46,6 @@ input[type="password"] {
 input:focus {
   border-style: none;
 }
-
-/* input[type="text" i] {
-  font-size: 20px;
-  font-weight: bold;
-  color: #919191;
-} */
 
 .signup-btn {
   padding: 6px 10px;
